# CatalogElectionCLI

./: .env.example  Cargo.toml  README.md  build.rs  catalog.py  catalog.sh  copy_scripts.sh  election.py  election.sh
